--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Transit Techies NYC
 email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Transit Techies NYC
+  Transit Techies NYC: Bringing together people who love transit, transporation, and smart cities!
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://transittechies.nyc" # the base hostname & protocol for your site
 github_username:  transittechies
