--- a/_data/pastspeakers.yml
+++ b/_data/pastspeakers.yml
@@ -1,3 +1,14 @@
+- name: Abhijit Valluri
+  link: https://www.linkedin.com/in/abhijitvalluri/
+  image: Abhijit_Valluri.jpg
+
+- name: Mallory Bulkley
+  link: https://twitter.com/mallorybulkley/
+  image: Mallory_Bulkley.jpg
+
+- name: Scott Morris
+  link: https://twitter.com/smorris777
+
 - name: Pranav Badami
   link: https://twitter.com/Pranav_Badami
   image: Pranav_Badami.jpg
