first wave style changes

--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -6,4 +6,4 @@
 - name: Kohzy Koh
   link: https://twitter.com/kohzy/
   image: Kohzy_Koh.jpg
-  blurb: This is Kohzy's blurb.
+  blurb: Kohzy likes learning new things. By day he's a product manager on Intersection's digital display platform IxNConnect. By night (and weekend), he dables in AR, creative coding, speculative fiction, and of course, anything transit + tech.
