--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -1,9 +1,9 @@
 - name: Tyler Green
   link: https://twitter.com/greent_tyler
   image: Tyler_Green.jpg
-  blurb: This is Tyler's blurb.
+  blurb: Tyler is an enthusiast of all things urban. As an engineer on Intersection's IxNConnect platform, he creates digital solutions to improve the transit rider experience. Outside of the office, he can be found riding trains to ends of lines, rooting for the Yankees, and reading about urban leaders past, present, and future.
 
-- name: Kohzy Koh
+- name: Kohzy
   link: https://twitter.com/kohzy/
   image: Kohzy_Koh.jpg
   blurb: Kohzy likes learning new things. By day he's a product manager on Intersection's digital display platform IxNConnect. By night (and weekend), he dables in AR, creative coding, speculative fiction, and of course, anything transit + tech.
