--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -6,4 +6,4 @@
 - name: Kohzy
   link: https://twitter.com/kohzy/
   image: Kohzy_Koh.jpg
-  blurb: Kohzy likes learning new things. By day he's a product manager on Intersection's digital display platform IxNConnect. By night (and weekend), he dables in AR, creative coding, speculative fiction, and of course, anything transit + tech.
+  blurb: Kohzy likes learning new things. By day he's a product manager on Intersection's digital display platform IxNConnect. By night (and weekend), he dabbles in AR, creative coding, speculative fiction, and of course, anything transit + tech.
