--- a/_data/pastspeakers.yml
+++ b/_data/pastspeakers.yml
@@ -1,3 +1,21 @@
+- name: Francis Tseng
+  link: https://twitter.com/frnsys
+
+- name: Sunny Zheng
+  link: https://twitter.com/sunnyswords
+  image: Sunny_Zheng.jpg
+
+- name: Jacqueline Klopp
+  link: https://twitter.com/jmklopp1
+
+- name: Lauren Tarte
+  link: https://twitter.com/racingthentrain
+  image: Lauren_Tarte.jpg
+
+- name: Anne Halvorsen
+  link: https://www.linkedin.com/in/anne-halvorsen-1a9936a3/
+  image: Anne_Halvorsen.jpg
+
 - name: Abhijit Valluri
   link: https://www.linkedin.com/in/abhijitvalluri/
   image: Abhijit_Valluri.jpg
