--- a/_data/pastspeakers.yml
+++ b/_data/pastspeakers.yml
@@ -1,3 +1,18 @@
+- name: Indraneel Purohit
+  link: https://twitter.com/indraneel24
+  image: Indraneel_Purohit.jpg
+
+- name: Melody Starling
+  link: https://twitter.com/pixelyunicorn
+
+- name: Evan Otero
+  link: https://twitter.com/EvanLOtero
+  image: Evan_Otero.jpg
+
+- name: Leo Frachet
+  link: https://twitter.com/LeoFrachet
+  image: Leo_Frachet.jpg
+
 - name: Tara Pham
   link: https://twitter.com/tarapham
   image: Tara_Pham.jpg
