--- a/_data/pastspeakers.yml
+++ b/_data/pastspeakers.yml
@@ -4,6 +4,7 @@
 
 - name: Melody Starling
   link: https://twitter.com/pixelyunicorn
+  image: Melody_Starling.jpg
 
 - name: Evan Otero
   link: https://twitter.com/EvanLOtero
