added #12 event and past speakers

--- a/_data/pastspeakers.yml
+++ b/_data/pastspeakers.yml
@@ -1,3 +1,11 @@
+- name: Marcio Lima
+
+- name: Myung Cha
+
+- name: Aleksey Bilogur
+  link: https://twitter.com/ResidentMario
+  image: Aleksey_Bilogur.jpg
+
 - name: Indraneel Purohit
   link: https://twitter.com/indraneel24
   image: Indraneel_Purohit.jpg
