added Myung Cha

--- a/_data/pastspeakers.yml
+++ b/_data/pastspeakers.yml
@@ -1,6 +1,8 @@
 - name: Marcio Lima
 
 - name: Myung Cha
+  link: https://www.linkedin.com/in/myung-cha-8b433649/
+  image: Myung_Cha.jpg
 
 - name: Aleksey Bilogur
   link: https://twitter.com/ResidentMario
