Update founder URL

--- a/_data/founders.yml
+++ b/_data/founders.yml
@@ -1,5 +1,5 @@
 - name: Tyler Green
-  link: https://www.linkedin.com/in/tylergreen/
+  link: https://tyleragreen.com/
   image: Tyler_Green.jpg
   blurb: Tyler is an enthusiast of all things urban. He can be found riding trains to ends of lines, rooting for the Yankees, and reading about urban leaders past, present, and future.
 
