Unify profile links to be personal site or LinkedIn, remove outdated socials, update footer to include attributions, and put better links on the homepage for people to get engaged.

--- a/_data/pastspeakers.yml
+++ b/_data/pastspeakers.yml
@@ -1,5 +1,5 @@
 - name: Sunny Ng
-  link: https://twitter.com/_blahblahblah
+  link: https://sunny.ng
   image: Sunny_Ng.jpg
 
 - name: Ivy Pan
@@ -7,7 +7,7 @@
   image: Ivy_Pan.jpg
 
 - name: Joshua Gee
-  link: https://twitter.com/jgee
+  link: https://www.josh.city
   image: Joshua_Gee.jpg
 
 - name: Jay Sathe
@@ -17,7 +17,7 @@
 - name: Abhilash Achenkunju
 
 - name: Joe Rodriguez
-  link: https://twitter.com/urbaneoptics
+  link: https://www.linkedin.com/in/joejamesrodrig/
   image: Joe_Rodriguez.jpg
 
 - name: Marcio Lima
@@ -27,76 +27,76 @@
   image: Myung_Cha.jpg
 
 - name: Aleksey Bilogur
-  link: https://twitter.com/ResidentMario
+  link: https://www.residentmar.io
   image: Aleksey_Bilogur.jpg
 
 - name: Indraneel Purohit
-  link: https://twitter.com/indraneel24
+  link: https://indraneel.org
   image: Indraneel_Purohit.jpg
 
 - name: Melody Starling
-  link: https://twitter.com/pixelyunicorn
+  link: https://melody.dev
   image: Melody_Starling.jpg
 
 - name: Evan Otero
-  link: https://twitter.com/EvanLOtero
+  link: https://www.linkedin.com/in/evanotero/
   image: Evan_Otero.jpg
 
 - name: Leo Frachet
-  link: https://twitter.com/LeoFrachet
+  link: https://www.linkedin.com/in/leofrachet/
   image: Leo_Frachet.jpg
 
 - name: Tara Pham
-  link: https://twitter.com/tarapham
+  link: https://www.linkedin.com/in/tarapham/
   image: Tara_Pham.jpg
 
 - name: Pranav Badami
-  link: https://twitter.com/Pranav_Badami
+  link: https://www.linkedin.com/in/pranavbadami/
   image: Pranav_Badami.jpg
 
 - name: Daniel Ramteke
-  link: https://twitter.com/underwaynyc
+  link: https://www.linkedin.com/in/danielramteke/
   image: Daniel_Ramteke.jpg
 
 - name: Mary Buchanan
-  link: https://twitter.com/Mary_LBee
+  link: https://www.linkedin.com/in/mary-buchanan-aicp-41980a7a/
   image: Mary_Buchanan.jpg
 
 - name: Lucas Marxen
   image: Lucas_Marxen.jpg
 
 - name: Clara Chung
-  link: https://twitter.com/kalamehh
+  link: https://www.linkedin.com/in/chung-clara/
   image: Clara_Clung.jpg
 
 - name: Adam Pearce
-  link: https://twitter.com/adamrpearce
+  link: https://roadtolarissa.com
   image: Adam_Pearce.png
 
 - name: Samara Trilling
-  link: https://twitter.com/samaratrilling
+  link: https://samaratrilling.com
   image: Samara_Trilling.jpg
 
 - name: Will Geary
-  link: https://twitter.com/wgeary
+  link: https://willgeary.github.io/portfolio/
   image: Will_Geary.jpg
 
 - name: Eric Goldwyn
-  link: https://twitter.com/ericgoldwyn
+  link: https://www.linkedin.com/in/eric-goldwyn-3541591a5/
   image: Eric_Goldwyn.jpg
 
 - name: Francis Tseng
-  link: https://twitter.com/frnsys
+  link: https://frnsys.com
 
 - name: Sunny Zheng
-  link: https://twitter.com/sunnyswords
+  link: https://www.linkedin.com/in/sunny-zheng-81a2628b/
   image: Sunny_Zheng.jpg
 
 - name: Jacqueline Klopp
-  link: https://twitter.com/jmklopp1
+  link: https://www.linkedin.com/in/jacqueline-klopp-17497911/
 
 - name: Lauren Tarte
-  link: https://twitter.com/racingthentrain
+  link: https://www.linkedin.com/in/ltarte/
   image: Lauren_Tarte.jpg
 
 - name: Anne Halvorsen
@@ -108,43 +108,43 @@
   image: Abhijit_Valluri.jpg
 
 - name: Mallory Bulkley
-  link: https://twitter.com/mallorybulkley/
+  link: https://mallorybulkley.com
   image: Mallory_Bulkley.jpg
 
 - name: Scott Morris
-  link: https://twitter.com/smorris777
+  link: https://www.linkedin.com/in/smorris-digitalleader/
 
 - name: Michael Zhang
-  link: https://twitter.com/mzhang13
+  link: https://michaelzhang.cc
   image: Michael_Zhang.jpg
 
 - name: Candy Chan
-  link: https://twitter.com/projsubwaynyc
+  link: https://www.linkedin.com/in/candy-h-y-chan-ra-leed-ap-1000894/
   image: Candy_Chan.jpg
 
 - name: Alex Bell
-  link: https://twitter.com/Bellspringsteen
+  link: https://www.linkedin.com/in/alexbell2/
   image: Alex_Bell.jpg
 
 - name: Kurt Raschke
-  link: https://twitter.com/kurtraschke
+  link: https://www.linkedin.com/in/kurtraschke/
 
 - name: Kate Chanba
-  link: https://twitter.com/kchanba
+  link: https://www.linkedin.com/in/kchanba/
   image: Kate_Chanba.jpg
 
 - name: David Emory
-  link: https://twitter.com/martarider
+  link: https://www.linkedin.com/in/david-emory-657b4479/
   image: David_Emory.jpg
 
 - name: Ray Cha
-  link: https://twitter.com/weatherpattern
+  link: https://www.linkedin.com/in/raycha/
   image: Ray_Cha.jpg
 
 - name: Noah Greenbaum
 
 - name: Will Fisher
-  link: https://twitter.com/wafisher
+  link: https://www.linkedin.com/in/wafisher/
   image: Will_Fisher.jpg
 
 - name: Assel Dmitriyeva
@@ -156,11 +156,10 @@
 - name: Josselin Philippe
 
 - name: Kathryn Killebrew
-  link: https://twitter.com/Banderkat
   image: Kathryn_Killebrew.jpg
 
 - name: Jiaxu Zhou
 
 - name: Dan Vanderkam
-  link: https://twitter.com/danvdk
+  link: https://www.linkedin.com/in/danvk/
   image: Dan_Vanderkam.jpg
