--- a/_data/founders.yml
+++ b/_data/founders.yml
@@ -1,9 +1,9 @@
 - name: Tyler Green
-  link: https://tyleragreen.com/
+  link: https://tyleragreen.com
   image: Tyler_Green.jpg
   blurb: Tyler is an enthusiast of all things urban. He can be found riding trains to ends of lines, rooting for the Yankees, and reading about urban leaders past, present, and future.
 
 - name: Kohzy Koh
-  link: https://www.linkedin.com/in/kohzy/
+  link: https://www.kohzy.com
   image: Kohzy_Koh.jpg
   blurb: Kohzy likes learning new things. He dabbles in AR, creative coding, speculative fiction, and of course, anything transit + tech.
